GCA - 154 Integrate gca-core-service with workload-service